--- a/landsman-font-testing/0506082-pal.tex
+++ b/landsman-font-testing/0506082-pal.tex
@@ -25,8 +25,10 @@ bookmarksopenlevel=10
 \usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.1}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=2000
-\hbadness=2000
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
 %\usepackage[small]{titlesec}
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
@@ -35,7 +37,7 @@ bookmarksopenlevel=10
 \usepackage{titletoc}
 \input{../helpers/psu-plain-titles.tex}
 
-\input{../helpers/mnsymbol.tex}
+\input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
 
 %\input{../helpers/psu-sc-headers.tex}
