--- a/quant-ph-0506082/0506082-charter.tex
+++ b/quant-ph-0506082/0506082-charter.tex
@@ -36,6 +36,7 @@ bookmarksopenlevel=10
 \input{../helpers/psu-plain-titles.tex}
 
 \input{../helpers/fix-underbrace.tex}
+\input{../helpers/cmrsum}
 
 
 \newtheorem{Definition}{Definition}
