--- a/quant-ph-0506082/0506082-pal-fancy.tex
+++ b/quant-ph-0506082/0506082-pal-fancy.tex
@@ -22,11 +22,12 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[noBBpl,sc,osf]{mathpazo}
+\usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.1}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=2000
-\hbadness=2000
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 %\usepackage[small]{titlesec}
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
@@ -37,7 +38,7 @@ bookmarksopenlevel=10
 \input{../helpers/psu-sc-headers.tex}
 \input{../helpers/psu-plain-titles.tex}
 
-\input{../helpers/mnsymbol.tex}
+\input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
 
 %\input{../helpers/psu-sc-headers.tex}
