--- a/landsman-font-testing/0506082.tex
+++ b/landsman-font-testing/0506082.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt,titlepage]{article}
 %\usepackage{showkeys}
 
-
+\usepackage{microtype}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{enumitem}
