--- a/quant-ph-0506082/0506082.tex
+++ b/quant-ph-0506082/0506082.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt,titlepage]{article}
 %\usepackage{showkeys}
 
-
+\usepackage{microtype}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{enumitem}
