--- a/2010.01324/super_fine05b.tex
+++ b/2010.01324/super_fine05b.tex
@@ -36,6 +36,7 @@ bookmarksopenlevel=10
 \sloppy
 \raggedbottom
 \pagestyle{plain}
+\usepackage{microtype}
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
