--- a/1912.06462/sd16.tex
+++ b/1912.06462/sd16.tex
@@ -27,8 +27,11 @@ bookmarksopenlevel=10
 \linespread{1.05}
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\tolerance=2000
-\hbadness=2000
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+\usepackage{microtype}
+
 \usepackage[small]{titlesec}
 \usepackage{titletoc}
 
