--- a/2010.01324/super_fine05b.tex
+++ b/2010.01324/super_fine05b.tex
@@ -509,15 +509,15 @@ at least does no harm.
 I seem to know a lot of people who are sold on this interventionist notion of causality, so let me add that I am
 sure it is good for something, but whatever that something is, analyzing models in the foundations
 of physics isn't it.\footnote{Tim Palmer wants to write a paper about this but he doesn't yet know it.} Case in
-point: The authors of \ref{finetuning} define superdeterminism as a model in which ``the settings are not free but are
+point: The authors of \cite{WoodFinetuning} define superdeterminism as a model in which ``the settings are not free but are
 causally influenced by other variables'', using the interventionist notion of ``causal'' but then define retrocausation as
 ``the possibility of causal influences that act in a direction contrary to the standard arrow
 of time'', ie explicitly using the space-time notion of causality. They thus leave out the option that the model may
 be space-time causal but interventionist retrocausal, which happens to be the case discussed here. 
 
-To be fair, this doesn't really matter for the argument of \ref{finetuning} which could well have included the
+To be fair, this doesn't really matter for the argument of \cite{WoodFinetuning} which could well have included the
 case discussed here. I am just picking on this to highlight that it's a bad idea to mix up two different
-notions of causality. Before I explain what the real problem is with the argument of \ref{finetuning}, 
+notions of causality. Before I explain what the real problem is with the argument of \cite{WoodFinetuning}, 
 first let me say some more about future-input dependence. 
 
 Future-input dependence is a term coined in \cite{Wharton} to describe retrocausality when using the interventionist notion
@@ -681,13 +681,13 @@ is finetuned per se, but that superdeterminism is finetuned {\emph{if}} one want
 possibility of superluminal signaling.
 
 
-The authors of \cite{finetuning} avoid the problem with \cite{Bendersky}'s argument (see Section \ref{suplum}) by not telling the reader how the superluminal signaling can be achieved to begin with. They instead just claim that superdeterminism is problematic using a particular notion of finetuning based on the ``faithfulness'' of a causal model (actual quote, not a scare-quote). The causal model is ``faithful'' or ``not finetuned'' if ``its conditional independences continue to hold for any variation of the causal-statistical parameters''. This definition leaves aside whether the parameters of the model can be varied to begin with, or if, how likely such variations are. I.e., the definition suffers from the very problem we discussed above. 
+The authors of \cite{WoodFinetuning} avoid the problem with \cite{Bendersky}'s argument (see Section \ref{suplum}) by not telling the reader how the superluminal signaling can be achieved to begin with. They instead just claim that superdeterminism is problematic using a particular notion of finetuning based on the ``faithfulness'' of a causal model (actual quote, not a scare-quote). The causal model is ``faithful'' or ``not finetuned'' if ``its conditional independences continue to hold for any variation of the causal-statistical parameters''. This definition leaves aside whether the parameters of the model can be varied to begin with, or if, how likely such variations are. I.e., the definition suffers from the very problem we discussed above. 
 
-That the notion of finetuning in \cite{finetuning} is scientifically meaningless is apparent by the authors' elaboration on Bohmian mechanics. Bohmian mechanics with the equilibrium hypothesis is finetuned, according to their definition, because one could vary the equilibrium hypothesis, which allows deviations from Born's rule and thus potentially also allows superluminal signaling. But given that Bohmian mechanics with the equilibrium hypothesis is equivalent to the Copenhagen Interpretation with Born's rule, this means in \cite{finetuning}'s terms, quantum mechanics itself is finetuned. 
+That the notion of finetuning in \cite{WoodFinetuning} is scientifically meaningless is apparent by the authors' elaboration on Bohmian mechanics. Bohmian mechanics with the equilibrium hypothesis is finetuned, according to their definition, because one could vary the equilibrium hypothesis, which allows deviations from Born's rule and thus potentially also allows superluminal signaling. But given that Bohmian mechanics with the equilibrium hypothesis is equivalent to the Copenhagen Interpretation with Born's rule, this means in \cite{WoodFinetuning}'s terms, quantum mechanics itself is finetuned. 
 
-Now, quantum mechanics is arguably a theory with high explanatory power, so what is going wrong with their argument? What goes wrong is that they do not quantify the probability for conditional independences to not hold.\footnote{In fact, the biggest part of the paper \cite{finetuning} is dedicated to explaining why the causal discovery algorithms that they use are not suitable to analyze entanglement because, in their own words, ``Independences simply do not provide enough information. One needs a causal discovery algorithm that looks at the {\emph{strength of correlations}} to reproduce Bell's conclusions.'' (Emphasis original.)} They do not do this because they cannot: Doing so would require specifying a probability distribution for varying the model's parameters. We do not have such a distribution because we have no data for superdeterminism except that which supports Born's rule. And Born's rule itself is a good example for an assumption that removes finetuning. The reason Born's rule is not finetuned is that it is simple and it explains a lot of data. This is correct in quantum mechanics, and is still correct in superdeterminism, because it is correct, period. We know this empirically.
+Now, quantum mechanics is arguably a theory with high explanatory power, so what is going wrong with their argument? What goes wrong is that they do not quantify the probability for conditional independences to not hold.\footnote{In fact, the biggest part of the paper \cite{WoodFinetuning} is dedicated to explaining why the causal discovery algorithms that they use are not suitable to analyze entanglement because, in their own words, ``Independences simply do not provide enough information. One needs a causal discovery algorithm that looks at the {\emph{strength of correlations}} to reproduce Bell's conclusions.'' (Emphasis original.)} They do not do this because they cannot: Doing so would require specifying a probability distribution for varying the model's parameters. We do not have such a distribution because we have no data for superdeterminism except that which supports Born's rule. And Born's rule itself is a good example for an assumption that removes finetuning. The reason Born's rule is not finetuned is that it is simple and it explains a lot of data. This is correct in quantum mechanics, and is still correct in superdeterminism, because it is correct, period. We know this empirically.
 
-I should add here, that the claim in \cite{finetuning} is, more precisely, that superdeterminism (and retrocausality) is {\emph{more}} finetuned, according to their definition, 
+I should add here, that the claim in \cite{WoodFinetuning} is, more precisely, that superdeterminism (and retrocausality) is {\emph{more}} finetuned, according to their definition, 
 than quantum mechanics (and Bohmian mechanics, and many worlds, and any other logically equivalent formulation of quantum mechanics). But since we have just seen that their definition tells us nothing about explanatory power, there isn't much to learn from this. It's like they first demonstrate a detector doesn't measure altitude but then use the same detector to claim the Rocky Mountains are higher than Mt.\ Everest. 
 
 The reader who doubts that a superdeterministic theory can reproduce the predictions of quantum mechanics without finetuning is welcome to have a look at the toy model put forward in \cite{toymodel}. It does away with the collapse postulate by positing a violation of Statistical Independence. Finetuning is not required because all it takes to get Born's rule is the detector setting, not the details of the hidden variables.
@@ -697,11 +697,11 @@ It was also previously demonstrated in \cite{rfinetuning} that finetuning in a s
 drawing on symmetry constraints, and in \cite{Hossenfelder:2020gdb} it was further shown that Born's rule can generally be derived from a symmetry requirement
 which provides a simple (hence, not finetuned) explanation for why quantum mechanics is robust. This type of argument should be familiar to particle physicists. 
 
-It was mentioned in \cite{finetuning} that an evolution law with attractor behavior can remove finetuning. This is sometimes called ``dynamical relaxation'' in the scientific literature, when applied to certain initial conditions. The idea here is that a dynamical law with an attractor can make a model less sensitive to the choice of initial conditions. But note that this is the type of superfluous assumption that we discussed above. Born's rule, or the equilibrium hypothesis for pilot waves, are simple assumptions that suffice to explain observations -- so far. Replacing them with a dynamical law that does not improve the fit to data decreases the explanatory power of the model.
+It was mentioned in \cite{WoodFinetuning} that an evolution law with attractor behavior can remove finetuning. This is sometimes called ``dynamical relaxation'' in the scientific literature, when applied to certain initial conditions. The idea here is that a dynamical law with an attractor can make a model less sensitive to the choice of initial conditions. But note that this is the type of superfluous assumption that we discussed above. Born's rule, or the equilibrium hypothesis for pilot waves, are simple assumptions that suffice to explain observations -- so far. Replacing them with a dynamical law that does not improve the fit to data decreases the explanatory power of the model.
 
 However, as emphasized earlier, one does not expect the limit in which superdeterminism recovers Born's rule to be exact. Deviations from it should be experimentally observable, eventually. Therefore, one day the additonal assumptions may become justified because they improve the capability of the model to fit data. But presently, we have no information on which to base the assumption that deviations are somehow large, or likely, or even that they can be exploited in practice. 
 
-The argument put forward in \cite{Valentini1,Valentini2} suffers from exactly the same problem as that in \cite{finetuning}. The authors of \cite{Valentini1,Valentini2} postulate that certain variations of parameters in superdeterministic models must be possible and are likely. They fail to notice that any statement of this type would require knowledge of both the model and the probability distribution.
+The argument put forward in \cite{Valentini1,Valentini2} suffers from exactly the same problem as that in \cite{WoodFinetuning}. The authors of \cite{Valentini1,Valentini2} postulate that certain variations of parameters in superdeterministic models must be possible and are likely. They fail to notice that any statement of this type would require knowledge of both the model and the probability distribution.
 
 To summarize this section: A model is finetuned if it lacks explanatory power. To evaluate whether a model is finetuned, one therefore needs to look at a model.  
 
@@ -824,7 +824,7 @@ A.~Bendersky, G.~Senno, G.~de la Torre, S.~Figueira, A.~Acin, {\sl ``Non-signali
   
  
  
-  \bibitem{finetuning} 
+  \bibitem{WoodFinetuning} 
 C.~J.~Wood, R.~W.~Spekkens, {\sl ``The lesson of causal discovery algorithms for quantum correlations: Causal explanations of Bell-inequality violations require fine-tuning,} New J.\ Phys.\ 17, 033002 (2015) [arXiv:1208.4119 [quant-ph]].
 
  
