--- a/2003.03395/main.tex
+++ b/2003.03395/main.tex
@@ -1,21 +1,61 @@
-\documentclass[a4paper]{article}
+\documentclass[12pt]{article}
 
 \usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage[colorinlistoftodos]{todonotes}
-\usepackage[a4paper]{geometry}
 \usepackage{braket}
-\usepackage[hidelinks]{hyperref}
-\usepackage{hyperref}
 \usepackage{comment}
  
 \title{Reformulating Bell's Theorem: The Search for a Truly Local Quantum Theory\thanks{This is a preprint. The final and definitive version of this paper will be published in \textit{Studies in History and Philosophy of Modern Physics}.}} 
  
 \author{Mordecai Waegell\thanks{Institute for Quantum Studies, Chapman University, CA 92866, United States} \space and Kelvin J. McQueen\thanks{Department of Philosophy, Chapman University, CA 92866, United States.}}
 
-\date{\today}
+\date{6 Mar 2020}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \begin{document}
 \maketitle
@@ -26,8 +66,10 @@ The apparent nonlocality of quantum theory has been a persistent concern. Einste
 
 \end{abstract}
 
+\newpage
 \tableofcontents
 
+\newpage
 \section{Introduction}
 
 In the early days of quantum theory, many physicists and philosophers were troubled by the apparent nonlocality of the theory.  The first major objection (expressed by Einstein at the 1927 Solvay Conference) was that if the wavefunction is interpreted as an extended physical object in space-time, then the proposed process of wavefunction collapse must occur instantaneously everywhere that the wavefunction exists---a manifestly nonlocal process, which seems at odds with special relativity. Many interpretations of quantum mechanics have arisen since those early days, and some have embraced this type of nonlocality, such as the dynamical collapse theories.\footnote{See e.g. Pearle (1976) and Ghirardi, Rimini, and Weber (1986).} Many other models circumvent it by removing wavefunction collapse from the theory. 
@@ -216,7 +258,7 @@ For the purpose of this paper, we define a \textit{global world} as one in which
 
 In the following subsections we will discuss two variant many \textit{global worlds} models. In the first, the global worlds are created by branching (\textit{global branching}), in the second, there is no branching -- each global world has always existed (\textit{global divergence}).
 
-\begin{figure}[t]
+\begin{figure}[pt]
     \centering
     \includegraphics[width=3in]{Branching.pdf}
     \caption{A space-time diagram showing two objects in two different Lorentz frames, $S$ and $S'$.  Consider the case that object 1 is made to branch at event E$_1$.  In frame $S$, this causes object 2 to branch at E$_2$, because E$_1$ and E$_2$ are simultaneous in $S$. But in frame $S'$ E$_2$ is not simultaneous with E$_1$, and thus object 2 does not branch there, which makes the branching situation at event E$_2$ ill-defined. In order to obtain a model with well-defined events in space-time, we must either choose a preferred Lorentz frame in which branching occurs (e.g. only $S$ or only $S'$), or we must adopt the view that if branching occurs in any frame, then the object has branched in all frames.  If we take this latter view, then object 1 branching at E$_1$ causes object 2 to branch at E$_2$ in $S$, which causes object 1 to branch at E$_3$ in $S'$, which causes object 2 branch at E$_4$ in $S$, and so on, until both objects are branched for all time.}
@@ -349,7 +391,7 @@ Elements $\lambda^{Aa}$, $\lambda^{Ab}$, $\lambda^{Ba}$, and $\lambda^{Bb}$ in t
 
 We now ask whether these localized elements, whose existence is required by \textit{true locality}, can be accounted for by semi-local branching. Typically, the ontology of semi-local models is exhaustively described by the wavefunction.\footnote{This statement is neutral as to whether the wavefunction \textit{is} the complete ontology (wavefunction realism) or is the complete \textit{description} of the ontology. In Sec. \ref{Oxford} we apply our argument to another semi-local ontology,  \textit{spacetime state realism}.} However, advocates of semi-local branching models (as well as advocates of global branching models) claim that the wave function enables us to define local descriptions of regions, in the form of reduced density operators.\footnote{See Sebens and Carroll (2018, pp.66-8) and the views discussed in the next section.} Perhaps, then, $\lambda^{Ab}$ could be accounted for by the reduced density operator local to Alice's region and $\lambda^{Ba}$ could be accounted for by the reduced density operator local to Bob's region. But a moment's reflection reveals that this cannot be the case. For the reduced density operator local to Alice's region simply fails to describe the entanglement correlation manifested by Alice's measurement of $b$ after she measures $a$, e.g., Tr$\Big(\big(\rho_{Aa} \Ket{\uparrow}_{\rm Aa}\Bra{\uparrow}_{\rm Aa}\big) \otimes  \big(\rho_{Bb}\Ket{\uparrow}_{\rm Bb}\Bra{\uparrow}_{\rm Bb}\big)\Big) \neq \big|\Bra{\psi}\big(\Ket{\uparrow}_{\rm Aa} \otimes \Ket{\uparrow}_{\rm Bb}\big)\big|^2$, and likewise for any other entangled state.
 
-\begin{figure}
+\begin{figure}[ht]
     \centering
     \includegraphics[width = 3in]{Local_Synthesis.pdf}
     \caption{Space-time diagram of the two-spin Bell test, showing the synthesis of localized elements of reality (the $\lambda$s) at the source $S$, the measurements $M_A$ and $M_B$, and the final meeting $F$.  In order to locally synthesize the correlated elements of reality, identical copies of the nonseparable wavefunction $\Psi$ must also be localized elements of reality present at both $M_A$ and $M_B$.  However, the copy at $M_A$ ($M_B$) is instantaneously updated by Bob's (Alice's) measurement, which violates local causality.}
