--- a/helpers/fixarxiv-palatino-mathpazo.tex
+++ b/helpers/fixarxiv-palatino-mathpazo.tex
@@ -1,6 +1,6 @@
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
@@ -12,6 +12,7 @@
 
 \usepackage[small]{titlesec}
 \usepackage{cite}
+\usepackage{microtype}
 
 % hyperref last because otherwise some things go wrong.
 \usepackage[colorlinks=true
