--- a/helpers/fixarxiv-charter.tex
+++ b/helpers/fixarxiv-charter.tex
@@ -1,3 +1,23 @@
+
+%\usepackage{amssymb}
+\usepackage[full]{textcomp}
+\usepackage[osf]{XCharter}% lining figures in math, osf in text
+\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
+\usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
+\usepackage[cal=cm,scr=esstix]{mathalpha}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+\linespread{1.05}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
 \usepackage[colorlinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
@@ -11,22 +31,3 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-%\usepackage{amssymb}
-\usepackage[full]{textcomp}
-\usepackage[osf]{XCharter}% lining figures in math, osf in text
-\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
-\usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
-\usepackage[cal=cm,scr=esstix]{mathalpha}
-\linespread{1.05}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
-%\usepackage[letterpaper, margin=1.2in]{geometry}
-\tolerance=2000
-\hbadness=2000
-\usepackage[small]{titlesec}
-
-\input{../helpers/fix-underbrace.tex}
-%\input{../helpers/psu-sc-headers.tex}
-
-\usepackage{cite}
-\sloppy
-\raggedbottom
