--- a/helpers/fixarxiv-cmr.tex
+++ b/helpers/fixarxiv-cmr.tex
@@ -1,4 +1,19 @@
 %\usepackage{amsmath,amsthm,amscd,amssymb}
+
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
 \usepackage[colorlinks=true
 ,breaklinks=true
 ,urlcolor=blue
@@ -13,16 +28,6 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\linespread{1.05}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\sloppy
-
-% these include amsmath and that can cause trouble in older docs.
-\input{../helpers/mnsymbol.tex}
-\input{../helpers/fix-underbrace.tex}
-
-\usepackage[small]{titlesec}
-\usepackage{cite}
 
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
