--- a/helpers/fixarxiv-ebgaramond.tex
+++ b/helpers/fixarxiv-ebgaramond.tex
@@ -1,3 +1,25 @@
+
+\usepackage[lining,semibold,scaled=1.05]{ebgaramond}
+% Latex BOLD renders with ebgaramond semibold
+\usepackage[T1]{fontenc} % best for Western European languages 
+\usepackage{textcomp} % required to get special symbols 
+\usepackage[varqu,varl]{inconsolata}% a typewriter font must be defined 
+\usepackage{amsmath,amsthm}% must be loaded before newtxmath 
+\usepackage[ebgaramond,vvarbb,subscriptcorrection]{newtxmath} % STIX Bbb 
+\usepackage{bm} % load after all math to give access to bold math
+\usepackage{amssymb}
+\linespread{1.1}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+\input{../helpers/cmrsum.tex}
+\input{../helpers/fix-underbrace.tex}
+
 \usepackage[colorlinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
@@ -11,20 +33,3 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-
-\usepackage[lining,semibold,scaled=1.05]{ebgaramond}
-% Latex BOLD renders with ebgaramond semibold
-\usepackage[T1]{fontenc} % best for Western European languages 
-\usepackage{textcomp} % required to get special symbols 
-\usepackage[varqu,varl]{inconsolata}% a typewriter font must be defined 
-\usepackage{amsmath,amsthm}% must be loaded before newtxmath 
-\usepackage[ebgaramond,vvarbb,subscriptcorrection]{newtxmath} % STIX Bbb 
-\usepackage{bm} % load after all math to give access to bold math
-\usepackage{amssymb}
-\linespread{1.1}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=5000
-\hbadness=2000
-\usepackage[small]{titlesec}
-\input{../helpers/cmrsum.tex}
-\input{../helpers/fix-underbrace.tex}
