--- a/helpers/fixarxiv-garamondx.tex
+++ b/helpers/fixarxiv-garamondx.tex
@@ -1,3 +1,21 @@
+
+\usepackage{amssymb}
+\linespread{1.1}
+\usepackage[osf]{garamondx}
+\usepackage[garamondx,cmintegrals,cmbraces]{newtxmath}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
 \usepackage[colorlinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
@@ -11,11 +29,3 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage{amssymb}
-\linespread{1.1}
-\usepackage[osf]{garamondx}
-\usepackage[garamondx,cmintegrals,cmbraces]{newtxmath}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=5000
-\hbadness=2000
-\usepackage[small]{titlesec}
