--- a/helpers/fixarxiv-libtertine.tex
+++ b/helpers/fixarxiv-libtertine.tex
@@ -1,3 +1,24 @@
+
+\usepackage{amssymb}
+\usepackage{lmodern}
+\usepackage[lf,semibold]{libertine}
+\usepackage[T1]{fontenc}
+\usepackage{textcomp}
+%\usepackage[varqu,varl]{zi4}
+\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[libertine]{newtxmath}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
 \usepackage[colorlinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
@@ -11,19 +32,3 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage{amssymb}
-\usepackage{lmodern}
-\usepackage[lf,semibold]{libertine}
-\usepackage[T1]{fontenc}
-\usepackage{textcomp}
-%\usepackage[varqu,varl]{zi4}
-\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[libertine]{newtxmath}
-\linespread{1.1}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
-\tolerance=2000
-\hbadness=2000
-\usepackage[small]{titlesec}
-%\usepackage[letterpaper, margin=1.2in]{geometry}
-\input{../helpers/fix-underbrace.tex}
-
