--- a/2010.01324/super_fine05b.tex
+++ b/2010.01324/super_fine05b.tex
@@ -74,7 +74,7 @@ bookmarksopenlevel=10
 Ruth-Moufang-Str. 1,
 D-60438 Frankfurt am Main, Germany
 }
-\date{}
+\date{6 Oct 2020}
 \maketitle
 %\centerline{DRAFT \today}
 \vspace*{-1cm}
