--- a/2101.10873/main-012521.tex
+++ b/2101.10873/main-012521.tex
@@ -36,6 +36,7 @@ bookmarksopenlevel=10
 \sloppy
 \raggedbottom
 \pagestyle{plain}
+\usepackage{microtype}
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
@@ -107,8 +108,8 @@ bookmarksopenlevel=10
 \begin{document}
 
 
-\title{Quantum physics needs complex numbers}
-\author{Marc-Olivier Renou$^1$, David Trillo$^2$, Mirjam Weilenmann$^2$, Le Phuc Thinh$^2$, Armin Tavakoli$^2$, Nicolas Gisin$^{3,4}$, Antonio Ac\'in$^{1,5}$ and Miguel Navascu\'es$^2$}
+\title{\large Quantum physics needs complex numbers}
+\author{\normalsize Marc-Olivier Renou$^1$, David Trillo$^2$, Mirjam Weilenmann$^2$, Le Phuc Thinh$^2$, Armin Tavakoli$^2$, Nicolas Gisin$^{3,4}$, Antonio Ac\'in$^{1,5}$ and Miguel Navascu\'es$^2$}
 
 \affiliation{$^1$ICFO-Institut de Ciencies Fotoniques, The Barcelona Institute of Science and Technology, 08860 Castelldefels (Barcelona), Spain\\
 $^2$Institute for Quantum Optics and Quantum Information (IQOQI) Vienna, Austrian Academy of Sciences\\
@@ -120,7 +121,11 @@ $^5$ICREA-Instituci\`o Catalana de Recerca i Estudis Avançats, Lluis Companys 2
 \begin{abstract}
 Complex numbers, i.e., numbers with a real and an imaginary part, are essential for mathematical analysis, while their role in other subjects, such as electromagnetism or special relativity, is far less fundamental. Quantum physics is the only physical theory where these numbers seem to play an indispensible role, as the theory is explicitly formulated in terms of operators acting on complex Hilbert spaces. The occurrence of complex numbers within the quantum formalism has nonetheless puzzled countless physicists, including the fathers of the theory, for whom a real version of quantum physics, where states and observables are represented by real operators, seemed much more natural. In fact, previous works showed that such ``real quantum physics'' can reproduce the outcomes of any multipartite experiment, as long as the parts share arbitrary real quantum states. Thus, are complex numbers really needed for a quantum description of nature? Here, we show this to be case by proving that real and complex quantum physics make different predictions in network scenarios comprising independent quantum state sources. This allows us to devise a Bell-type quantum experiment whose input-output correlations cannot be approximated by any real quantum model. The successful realization of such an experiment would disprove real quantum physics, in the same way as standard Bell experiments disproved local  physics.
 \end{abstract}
+\date{26 Jan 2021}
+
 \maketitle
+\newpage
+
 \begin{quote}
 \emph{What is unpleasant here, and indeed directly to be objected to, is the use of complex numbers. $\Psi$ is surely fundamentally a real function.}
 
