--- a/helpers/fixarxiv-lucida.tex
+++ b/helpers/fixarxiv-lucida.tex
@@ -17,15 +17,13 @@ bookmarksopenlevel=10
 \usepackage[altbullet]{lucidabr}
 \linespread{1.05}
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
-\tolerance=2000
-\hbadness=2000
-\usepackage[small]{titlesec}
-%\usepackage[letterpaper, margin=1.2in]{geometry}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
-% the lucida varphi is hideous
-\DeclareSymbolFont{greekletters}{OML}{zplm}{m}{it}
-\DeclareMathSymbol{\varphi}{\mathord}{greekletters}{"27}
-
+% these include amsmath and that can cause trouble in older docs.
 \input{../helpers/fix-underbrace.tex}
-\input{../helpers/fix-revtex-12.tex}
+
+\usepackage[small]{titlesec}
 \usepackage{cite}
+\usepackage{microtype}
