--- a/1405.3483/1405.3483.tex
+++ b/1405.3483/1405.3483.tex
@@ -24,6 +24,7 @@ bookmarksopenlevel=10
 \sloppy
 \raggedbottom
 \pagestyle{plain}
+\usepackage{microtype}
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
@@ -137,7 +138,7 @@ We will take a symmetry transformation to be a linear mapping $\rho\mapsto g(\rh
 {\rm Tr} \Big(g(A)\,g(\rho)\Big)={\rm Tr} \Big(A\,\rho\Big)\;.
 \end{equation}
 
-With this definition of symmetry transformations, it is important to decide just what operators can represent physical quantities.  Certainly we want to include familiar quantities like momentum, angular momentum, etc. and functions of these quantities.  In particular, the projection operator on a non-degenerate eigenstate of such a physical quantity, as for instance the projection operator $(1\pm2s_z)/2$ on a state of a spin $1/2$ with $s_z=\pm 1/2$, represents a physical quantity.   In ordinary quantum mechanics, {\em any} Hermitian operator is assumed to represent a physical quantity, but if state vectors are not to be taken as a representation of reality, we can doubt whether  operators $\Lambda_\Psi$  that are defined  as the projection operators on arbitrary state-vectors $\Psi$  necessarily represent   physical quantities.  If they did, then according to our interpretive postulate ${\rm Tr}(\Lambda_\Psi\,\rho)$ would be the probability that a system with density matrix $\rho$ is in a state $\Psi$, which is just the sort of statement that we are taking as generally meaningless.  In any case, it is hard to see how one could ever tell that Schr\"{o}dinger's cat is in a state $|alive>+|dead>$ rather than, say, $|alive>-|dead>$.  
+With this definition of symmetry transformations, it is important to decide just what operators can represent physical quantities.  Certainly we want to include familiar quantities like momentum, angular momentum, etc. and functions of these quantities.  In particular, the projection operator on a non-degenerate eigenstate of such a physical quantity, as for instance the projection operator $(1\pm2s_z)/2$ on a state of a spin $1/2$ with $s_z=\pm 1/2$, represents a physical quantity.   In ordinary quantum mechanics, {\em any} Hermitian operator is assumed to represent a physical quantity, but if state vectors are not to be taken as a representation of reality, we can doubt whether  operators $\Lambda_\Psi$  that are defined  as the projection operators on arbitrary state-vectors $\Psi$  necessarily represent   physical quantities.  If they did, then according to our interpretive postulate ${\rm Tr}(\Lambda_\Psi\,\rho)$ would be the probability that a system with density matrix $\rho$ is in a state $\Psi$, which is just the sort of statement that we are taking as generally meaningless.  In any case, it is hard to see how one could ever tell that Schr\"{o}dinger's cat is in a state $|{\it alive}\rangle+|{\it dead}\rangle$ rather than, say, $|{\it alive}\rangle-|{\it dead}\rangle$.  
 
 This point is important for us,  because  if all Hermitian operators including projection operators represent physical quantities, then with our assumptions it can be shown that density matrices transform under any symmetry transformation $g$ with an inverse just as in ordinary quantum mechanics [11]:
 \begin{equation}
