--- a/2007.00619/PFMES_-_arxiv_v2.tex
+++ b/2007.00619/PFMES_-_arxiv_v2.tex
@@ -21,6 +21,7 @@ bookmarksopenlevel=10
 \sloppy
 \raggedbottom
 \pagestyle{plain}
+\usepackage{microtype}
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
