--- a/1405.3483/1405.3483.tex
+++ b/1405.3483/1405.3483.tex
@@ -4,20 +4,6 @@
 \def\BM#1{\mbox{\boldmath{$#1$}}}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[colorlinks=true
-,breaklinks=true
-,urlcolor=blue
-,anchorcolor=blue
-,citecolor=blue
-,filecolor=blue
-,linkcolor=blue
-,menucolor=blue
-,linktocpage=true]{hyperref}
-\hypersetup{
-bookmarksopen=true,
-bookmarksnumbered=true,
-bookmarksopenlevel=10
-}
 \usepackage[noBBpl,sc]{mathpazo}
 \usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \linespread{1.05}
@@ -43,6 +29,22 @@ bookmarksopenlevel=10
 %\input{../helpers/fix-revtex-12.tex}
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
 \begin{document}
 
 
@@ -439,7 +441,7 @@ The trace of this equation gives $2d{\rm Tr}(n\cdot \theta)=0$, so $n\cdot \thet
 \tau_r=T_r\;.
 \end{equation}
 
-\pdfbookmark{COMPACT GROUPS}{VII}
+\pdfbookmark{POSITIVITY}{VII}
 
 \begin{center}
 {\bf VII. POSITIVITY}
