--- a/1511.01069/cqm11.tex
+++ b/1511.01069/cqm11.tex
@@ -1,7 +1,7 @@
 % tCPHguide.tex
 % v4.0 released January 2015
 
-\documentclass{tCPH2e}
+\documentclass[12pt]{article}
 
 \usepackage{epstopdf}% To incorporate .eps illustrations using PDFLaTeX, etc.
 \usepackage{subfigure}% Support for small, `sub' figures and tables
@@ -10,7 +10,7 @@
 \usetikzlibrary{matrix,arrows,decorations.pathmorphing,decorations.pathreplacing,decorations.markings,backgrounds,positioning,fit,petri,positioning,shapes,snakes,fadings,automata,shadows}
 \usepackage[thicklines]{cancel}
 \usetikzlibrary{calc,shapes.callouts,shapes.arrows}
-\usepackage{amsmath,amssymb,euscript,array,mathrsfs,ctable,marvosym}
+\usepackage{amsthm,amsmath,amssymb,euscript,array,mathrsfs,ctable,marvosym}
 
 
 \theoremstyle{plain}
@@ -24,6 +24,49 @@
 
 \theoremstyle{remark}
 \newtheorem{remark}{Remark}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 %%%%%%%%%% My macros %%%%%%%%%%%%%%%%%%%%%%
 
@@ -132,10 +175,10 @@
 \title{\textit{Copenhagen Quantum Mechanics}}
 
 \author{
-\name{Timothy J. Hollowood}
-\affil{Department of Physics, Swansea University, Swansea SA2~8PP, U.K.}
-\received{September 2015}
+Timothy J. Hollowood\\
+Department of Physics, Swansea University, Swansea SA2~8PP, U.K.\\
 }
+\date{3 Nov 2015}
 
 \maketitle
 
@@ -145,9 +188,7 @@ But this overlooks the fact that the approach fits very well with modern measure
 Along the way, we explain why chaotic systems lead to wave functions that spread out quickly on macroscopic scales implying that \SCH cat states are the norm rather than curiosities generated in physicists' laboratories. We then describe how the conditioned state of a quantum system depends crucially on how the system is monitored illustrating this with the example of a decaying atom monitored with a time of arrival photon detector, leading to Bohr's quantum jumps. On the other hand, other kinds of detection lead to much smoother behaviour, providing yet another example of complementarity.
 Finally we explain how classical behaviour emerges, including classical mechanics but also thermodynamics.\end{abstract}
 
-\begin{keywords}
-measurement problem; Copenhagen interpretation; quantum trajectories; decoherence; quantum jumps
-\end{keywords}
+\newpage
 
 \section{Introduction}\label{s1}
 
@@ -1412,7 +1453,7 @@ H.~M.~Wiseman and J.~M.~Gambetta, ``Are Dynamical Quantum Jumps Detector-Depende
  Phys. Rev. Lett. {\bf 108} (2012) 220402.
 
 \bibitem{WW}
-V. ~F.~Weisskopf and E.~Wigner, ``Berechnung der natürlichen linienbreite auf grund der diracschen lichttheorie,"  Z. Phys. {\bf63} (1930) 54. 
+V. ~F.~Weisskopf and E.~Wigner, ``Berechnung der naturlichen linienbreite auf grund der diracschen lichttheorie,"  Z. Phys. {\bf63} (1930) 54. 
  
 \bibitem{Sud}
 A.~Sudbery, ``The Rapid-Dispersal Approximation in Radiative Atomic Processes,", Ann. of Phys. {\bf188} (1998) 1.
