--- a/1511.01069/cqm11.tex
+++ b/1511.01069/cqm11.tex
@@ -27,7 +27,7 @@
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
@@ -377,12 +377,12 @@ are properties of the measuring device and describe its effect on the microscopi
 is registered. The states $\ket{M_i}$ are the pointer states of $M$, macroscopically distinct and so having zero inner product.
 
 Unitary evolution, along with the orthogoniality of the pointer states, requires the completeness relation
-\EQ{
+\begin{multline}
 1=\bra{\Psi(T)}\Psi(T)\rangle=\sum_{ij}\underbrace{\bra{M_i}M_j\rangle}_{=\,\delta_{ij}}\bra{\Phi}\hat \Omega_i^\dagger\hat \Omega_j\ket{\Phi}
-=\bra{\Phi}\sum_i\hat \Omega_i^\dagger\hat \Omega_i\ket{\Phi}
-\quad\implies \sum_i\hat\Omega_i^\dagger\hat\Omega_i=1\ ,
+=\bra{\Phi}\sum_i\hat \Omega_i^\dagger\hat \Omega_i\ket{\Phi}\\
+\hbox to .5in{\qquad}\implies \sum_i\hat\Omega_i^\dagger\hat\Omega_i=1\ ,
 \label{com}
-}
+\end{multline}
 since the initial microscopic state is arbitrary.
 This means mathematically that the set of operators $\{\hat\Omega_i^\dagger\hat\Omega_i\}$ form a POVM: 
 \begin{quote}{\bf POVM:} For our purposes, a POVM (positive, operator-valued measure) is simply a set of operators $\{\hat\Pi_i\}$ that is complete, in the sense that $\sum_i\hat\Pi_i=1$, and for which the expectation values $\bra{\Phi}\hat\Pi_i\ket{\Phi}$ are positive real numbers $p_i$. Therefore, the $p_i$ can be given the interpretation as probabilities since $p_i\geq0$ and $\sum_ip_i=1$. But note that, in general, there is no requirement that the operators $\hat\Pi_i$ either commute or are projection operators.
@@ -699,7 +699,7 @@ In more complicated situations, we will relax the requirement of strict commutat
 The preferred observables in the form of the quasi-classical POVM then determine the local states as
 $\ket{\Psi_i}=\hat\Pi_i\ket{\Psi}$. In the present example,
 \EQ{
-\ket{\Psi_1}=\ket{M_1}\bra{M_1}\Psi\rangle=c_1\ket{M_1}\otimes\ket{h}\ ,\qquad
+\ket{\Psi_1}=\ket{M_1}\bra{M_1}\Psi\rangle=c_1\ket{M_1}\otimes\ket{h}\ ,\quad
 \ket{\Psi_2}=\ket{M_2}\bra{M_2}\Psi\rangle=c_2\ket{M_2}\otimes\ket{v}\ .
 }
 The fact that the operators $\hat\Pi_1$ and $\hat\Pi_2$ almost commute follows from the fact that the overlap between the macroscopically distinct states $\bra{M_1}M_2\rangle$ will be exceedingly tiny.
