--- a/1511.01069/cqm11.tex
+++ b/1511.01069/cqm11.tex
@@ -377,12 +377,13 @@ are properties of the measuring device and describe its effect on the microscopi
 is registered. The states $\ket{M_i}$ are the pointer states of $M$, macroscopically distinct and so having zero inner product.
 
 Unitary evolution, along with the orthogoniality of the pointer states, requires the completeness relation
-\begin{multline}
-1=\bra{\Psi(T)}\Psi(T)\rangle=\sum_{ij}\underbrace{\bra{M_i}M_j\rangle}_{=\,\delta_{ij}}\bra{\Phi}\hat \Omega_i^\dagger\hat \Omega_j\ket{\Phi}
-=\bra{\Phi}\sum_i\hat \Omega_i^\dagger\hat \Omega_i\ket{\Phi}\\
-\hbox to .5in{\qquad}\implies \sum_i\hat\Omega_i^\dagger\hat\Omega_i=1\ ,
+\begin{align}
+1=\bra{\Psi(T)}\Psi(T)\rangle
+&=\sum_{ij}\underbrace{\bra{M_i}M_j\rangle}_{=\,\delta_{ij}}\bra{\Phi}\hat \Omega_i^\dagger\hat \Omega_j\ket{\Phi}\\
+&=\bra{\Phi}\sum_i\hat \Omega_i^\dagger\hat \Omega_i\ket{\Phi}\\
+&\!\!\implies\sum_i\hat\Omega_i^\dagger\hat\Omega_i=1\ ,
 \label{com}
-\end{multline}
+\end{align}
 since the initial microscopic state is arbitrary.
 This means mathematically that the set of operators $\{\hat\Omega_i^\dagger\hat\Omega_i\}$ form a POVM: 
 \begin{quote}{\bf POVM:} For our purposes, a POVM (positive, operator-valued measure) is simply a set of operators $\{\hat\Pi_i\}$ that is complete, in the sense that $\sum_i\hat\Pi_i=1$, and for which the expectation values $\bra{\Phi}\hat\Pi_i\ket{\Phi}$ are positive real numbers $p_i$. Therefore, the $p_i$ can be given the interpretation as probabilities since $p_i\geq0$ and $\sum_ip_i=1$. But note that, in general, there is no requirement that the operators $\hat\Pi_i$ either commute or are projection operators.
@@ -392,7 +393,7 @@ This means mathematically that the set of operators $\{\hat\Omega_i^\dagger\hat\
 \begin{tikzpicture}[scale=1,decoration={markings,mark=at position 0.6 with {\arrow{>}}}]
 \node at (-2.4,0) (a1) {$\ket{M_0}\otimes\ket{\Phi}$};
 %\node at (3.6,0.8) (a2) {$\ket{M_1}\otimes\hat\Omega_i\ket{\Phi}\qquad p_1=\bra{\Phi}\hat\Omega_1\hat\Omega_1\ket{\Phi}$};
-\node at (4.2,0) (a3) {$\ket{M_i}\otimes\hat\Omega_i\ket{\Phi}\qquad p_i=\bra{\Phi}\hat\Omega_i^\dagger\hat\Omega_i\ket{\Phi}$};
+\node at (4.2,0) (a3) {$\quad\ket{M_i}\otimes\hat\Omega_i\ket{\Phi}\qquad p_i=\bra{\Phi}\hat\Omega_i^\dagger\hat\Omega_i\ket{\Phi}$};
 \draw[very thick,postaction={decorate}] (-1,0) -- (0,0);
 \draw[very thick,postaction={decorate}] (0,0) -- (1,0);
 \draw[very thick,postaction={decorate}] (0,0) -- (1,1);
