--- a/1511.01069/cqm11.tex
+++ b/1511.01069/cqm11.tex
@@ -236,7 +236,7 @@ The characteristic feature of QM is its linearity: states are vectors and so one
 }
 we get another state of a single photon with arbitrary polarization, including plane polarized states when $c_1$ and $c_2$ are real, at an angle $\arctan(c_2/c_1)$ to the horizontal axis. For general complex $c_2/c_1$, we get a photon with elliptical polarization.
 
-If quantum mechanics is {\it the\/} universal theory of everything, then nothing should be off limit. In particular, there should  be quantum states corresponding to, say, a cat and, in particular, a live cat $\ket{\LCATH}$ and a dead cat $\ket{\DCATH}$. Both states make perfect macroscopic sense. But now if we make a vector sum as above,
+If quantum mechanics is {\it the\/} universal theory of everything, then nothing should be off limits. In particular, there should  be quantum states corresponding to, say, a cat and, in particular, a live cat $\ket{\LCATH}$ and a dead cat $\ket{\DCATH}$. Both states make perfect macroscopic sense. But now if we make a vector sum as above,
 \EQ{
 \ket{\Phi}=c_1\ket{\LCATH}+c_2\ket{\DCATH}\ ,
 \label{scs}
